--- a/Raspi/Sandbox/package.json
+++ b/Raspi/Sandbox/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "~4.13.3",
     "sequelize": "~3.13.0",
-    "sqlite3": "~3.1.1"
+    "sqlite3": "~3.1.1",
+    "angular": "~1.4.7"
   }
 }
