--- a/Raspi/Sandbox/package.json
+++ b/Raspi/Sandbox/package.json
@@ -10,8 +10,8 @@
   "license": "BSD-2-Clause",
   "dependencies": {
     "express": "~4.13.3",
-    "sequelize": "~3.13.0",
     "sqlite3": "~3.1.1",
-    "angular": "~1.4.7"
+    "angular": "~1.4.7",
+    "serialport": "~2.0.5"
   }
 }
